@@ -3,6 +3,9 @@ Changes in version 1.0-32:
 * Corrected the interface information in yaImpute_init.c so that it matches
 the actual arguments of rfoneprox. Thanks to Prof Ripley for finding the error.
 
+* Added an argument to varSelection and grmsd that is passed to impute.yai so that the
+method of computing the imputed value can be controlled. 
+
 Changes in version 1.0-31:
 
 * Changed a variable name in one of the ANN routines so that the code can 
